--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header_logo">
         <a href="#">
-            <img src="./honeytrainimg/LOGO.png" alt="">
+            <img src="/src/assets/images/icon/LOGO.svg" alt="">
         </a>
         <a href="">
           <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M20 22H4v-2a5 5 0 0 1 5-5h6a5 5 0 0 1 5 5zm-8-9a6 6 0 1 1 0-12a6 6 0 0 1 0 12"/></svg>
