--- a/tripInfo.html
+++ b/tripInfo.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/tripInfo.css">
-    <link rel="stylesheet" href="/css/top_btn.css">
+    <link rel="stylesheet" href="/src/assets/css/header.css">
+    <link rel="stylesheet" href="/src/assets/css/tripInfo.css">
+    <link rel="stylesheet" href="/src/assets/css/top_btn.css">
     <title>行程介紹</title>
 </head>
 
