--- a/src/routes/user/contact.html
+++ b/src/routes/user/contact.html
@@ -38,10 +38,10 @@
                     <label for="contactClass">問題分類</label>
                     <br>
                     <select name="" id="ontactClass">
-                        <option value="0">訂單/取消問題</option>
-                        <option value="1">付款/退款問題</option>
-                        <option value="2">車廂/設備問題</option>
-                        <option value="3">旅程問題</option>
+                        <option value="0">訂單/取消</option>
+                        <option value="1">付款/退款</option>
+                        <option value="2">車廂/設備</option>
+                        <option value="3">旅程相關</option>
                         <option value="4">菜單成分或內容</option>
                     </select>
                 </div>
