update_facilities_function

--- a/facilities.html
+++ b/facilities.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="facilities_hero">
             <div class="header_logo">
                 <a href="#">
                     <img src="/src/assets/images/icon/LOGO.svg" alt="">
@@ -31,8 +31,8 @@
                     <li><a href="">首頁</a></li>
                     <li><a href="">概念</a></li>
                     <li><a href="">饗宴</a></li>
-                    <li><a href="">設施</a></li>
-                    <li><a href="">旅程</a></li>
+                    <li><a href="/facilities.html">設施</a></li>
+                    <li><a href="/trip.html">旅程</a></li>
                 </ul>
             </nav>
     </header>
