--- a/reservation.html
+++ b/reservation.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="reservation">
-    <header>
+    <header class="reservation_hero">
         <div class="header_logo">
             <a href="#">
                 <img src="/src/assets/images/icon/LOGO.svg" alt="">
@@ -29,8 +29,8 @@
                 <li><a href="">首頁</a></li>
                 <li><a href="">概念</a></li>
                 <li><a href="">饗宴</a></li>
-                <li><a href="">設施</a></li>
-                <li><a href="">旅程</a></li>
+                <li><a href="/facilities.html">設施</a></li>
+                <li><a href="/trip.html">旅程</a></li>
             </ul>
         </nav>
     </header>
@@ -41,10 +41,10 @@
             <div>
                 <label for="people">旅客人數：</label>
                 <select name="" id="people">
-                    <option value="1">1人</option>
-                    <option value="2" selected>2人</option>
-                    <option value="3">3人</option>
-                    <option value="4">4人</option>
+                    <option value="1">1</option>
+                    <option value="2" selected>2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
                 </select>
             </div>
 
@@ -63,7 +63,7 @@
 
             <div>
                 <label for="route">路線：</label>
-                <select name="" id="">
+                <select name="" id="route">
                     <option value="taipei_taichung">台北 ⭢ 台中</option>
                     <option value="taipei_hualien">台北 ⭢ 花蓮</option>
                     <option value="taichung_tainan">台中 ⭢ 台南</option>
@@ -86,21 +86,22 @@
                     </select>
                 </div>
                 <div>
-                    <label for="car_type">車廂類型：</label>
-                    <select name="" id="car_type">
-                        <option value="f">F1</option>
-                        <option value="e">F2</option>
-                        <option value="d">F3</option>
-                        <option value="a">F4</option>
-                        <option value="a">F5</option>
-                        <option value="a">F6</option>
-                        <option value="a">F7</option>
-                        <option value="a">F8</option>
+                    <label for="seat">座位：</label>
+                    <select name="" id="seat">
+                        <option value="0">請選擇座位</option>
+                        <option value="f1">F1</option>
+                        <option value="f2">F2</option>
+                        <option value="f3">F3</option>
+                        <option value="f4">F4</option>
+                        <option value="f5">F5</option>
+                        <option value="f6">F6</option>
+                        <option value="f7">F7</option>
+                        <option value="f8">F8</option>
                     </select>
                 </div>
             </div>
 
-            <img src="/src/assets/images/plan/F車：8組雙人桌，1-2人，依人頭計價和點餐.svg" alt="">
+            <img id="car_image" src="/src/assets/images/plan/F.svg" alt="">
         </div>
 
     </form>
@@ -134,10 +135,11 @@
                             套餐內容：舒芙蕾, 抹茶
                         </label>
                         <select name="" id="dessert_jpA_qty">
-                            <option value="1" selected>1 份</option>
-                            <option value="2">2 份</option>
-                            <option value="3">3 份</option>
-                            <option value="4">4 份</option>
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
                         </select>
                     </div>
 
@@ -149,10 +151,11 @@
                             套餐內容：日式和菓子, 煎茶
                         </label>
                         <select name="" id="dessert_jpB_qty">
-                            <option value="1" selected>1 份</option>
-                            <option value="2">2 份</option>
-                            <option value="3">3 份</option>
-                            <option value="4">4 份</option>
+                            <option value="0" selected>0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
                         </select>
                     </div>
                 </div>
@@ -208,24 +211,28 @@
         <h6>訂位人資料</h6>
         <label for="lastName">姓名</label>
         <br>
-        <input type="text" id="Name" placeholder="請出入姓名">
+        <input type="text" id="Name" placeholder="請輸入姓名" minlength="2" required>
+        <span class="error"></span>
 
         <br>
         <label for="phone">手機號碼</label>
         <br>
-        <input type="tel" id="phone" pattern="09[0-9]{10}" placeholder="請輸入手機號碼">
-
+        <input type="tel" id="phone" pattern="09[0-9]{10}" placeholder="請輸入手機號碼" required>
+        <span class="error"></span>
         <br>
         <label for="email">電子郵件</label>
         <br>
-        <input type="email" id="email" placeholder="請輸入電子郵件">
+        <input type="email" id="email" placeholder="請輸入電子郵件" required>
+        <span class="error"></span>
 
         <br>
         <label for="creditCard">信用卡號</label>
         <br>
         <input type="text" id="creditCard" pattern="[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}"
-            placeholder="xxxx-xxxx-xxxx-xxxx">
-        <button>下一步</button>
+            placeholder="xxxx-xxxx-xxxx-xxxx" required>
+        <span class="error"></span>
+
+        <button type="submit" onclick="userInfoCheck()">下一步</button>
     </div>
     <!-- 訂位人資料結束 -->
 
@@ -234,6 +241,192 @@
         <br>
         Top
     </a>
+    <script>
+        // -------------------------------------------
+        // ----- 車廂圖片綁定車廂座位 -----
+        
+
+        // ----- 車廂選項綁定車廂座位與車廂圖片 -----
+        document.getElementById('car_type').addEventListener('change', function () {
+            var seatSelect = document.getElementById('seat');
+            var carImage = document.getElementById('car_image');
+
+            // 清空座位選項
+            seatSelect.innerHTML = '';
+
+            if (this.value === 'e') {
+                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                seatSelect.innerHTML += '<option value="e1">E2</option>';
+                seatSelect.innerHTML += '<option value="e2">E3</option>';
+                seatSelect.innerHTML += '<option value="e3">E4</option>';
+                carImage.src = '/src/assets/images/plan/E.svg';
+            } else if (this.value === 'd') {
+                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                seatSelect.innerHTML += '<option value="d1">D1</option>';
+                seatSelect.innerHTML += '<option value="d2">D2</option>';
+                seatSelect.innerHTML += '<option value="d3">D3</option>';
+                seatSelect.innerHTML += '<option value="d4">D4</option>';
+                seatSelect.innerHTML += '<option value="d5">D5</option>';
+                seatSelect.innerHTML += '<option value="d6">D6</option>';
+                carImage.src = '/src/assets/images/plan/D.svg';
+
+            } else if (this.value === 'a') {
+                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                seatSelect.innerHTML += '<option value="a1">A1</option>';
+                carImage.src = '/src/assets/images/plan/A.svg';
+
+            }
+
+            else {
+                // 還原到原始選項
+                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                carImage.src = '/src/assets/images/plan/F.svg';
+            }
+        });
+        // -------------------------------------------
+        // 甜點數量綁定人數
+        document.addEventListener('DOMContentLoaded', function () {
+            const dessertA = document.getElementById('dessert_jpA_qty');
+            const dessertB = document.getElementById('dessert_jpB_qty');
+            const people = document.getElementById('people');
+
+            function updateDessertAOptions() {
+                // 清空 dessertA 的選項
+                dessertA.innerHTML = '';
+
+                // 根據 people 的值添加選項到 dessertA
+                const peopleCount = parseInt(people.value);
+
+                for (let i = 0; i <= peopleCount; i++) {
+                    const option = document.createElement('option');
+                    option.value = i;
+                    option.textContent = i;
+                    dessertA.appendChild(option);
+                }
+
+                // 更新 dessertB 的選項
+                updateDessertBOptions();
+            }
+
+            function updateDessertBOptions() {
+                const peopleCount = parseInt(people.value);
+                const dessertAValue = parseInt(dessertA.value);
+
+                // 計算 dessertB 的最大可選數量
+                const maxDessertBValue = peopleCount - dessertAValue;
+
+                // 清空 dessertB 的選項
+                dessertB.innerHTML = '';
+
+                // 根據計算出的最大值添加選項
+                for (let i = 0; i <= maxDessertBValue; i++) {
+                    const option = document.createElement('option');
+                    option.value = i;
+                    option.textContent = i;
+                    dessertB.appendChild(option);
+                }
+            }
+
+            // 監聽 people 的選擇項改變事件
+            people.addEventListener('change', updateDessertAOptions);
+
+            // 監聽 dessertA 的選擇項改變事件
+            dessertA.addEventListener('change', updateDessertBOptions);
+
+            // 初始化選項
+            updateDessertAOptions();
+        });
+
+        //     document.addEventListener('DOMContentLoaded', function() {
+        //     const dessertA = document.getElementById('dessert_jpA_qty');
+        //     const dessertB = document.getElementById('dessert_jpB_qty');
+        //     const people = document.getElementById('people');
+
+        //     function updateDessertBOptions() {
+        //         const peopleCount = parseInt(people.value);
+        //         const dessertAValue = parseInt(dessertA.value);
+
+        //         // 計算 dessertB 的最大可選數量
+        //         const maxDessertBValue = peopleCount - dessertAValue;
+
+        //         // 清空 dessertB 的選項
+        //         dessertB.innerHTML = '';
+
+        //         // 根據計算出的最大值添加選項
+        //         for (let i = 0; i <= maxDessertBValue; i++) {
+        //             const option = document.createElement('option');
+        //             option.value = i;
+        //             option.textContent = i;
+        //             dessertB.appendChild(option);
+        //         }
+        //     }
+
+        //     // 監聽 dessertA 的選擇項改變事件
+        //     dessertA.addEventListener('change', updateDessertBOptions);
+        // });
+
+
+        // ---------------------------------------------------
+        // 訂位資料判斷
+        function userInfoCheck(event) {
+
+            // 取得輸入框
+            const name = document.getElementById('Name');
+            const phone = document.getElementById('phone');
+            const email = document.getElementById('email');
+            const creditCard = document.getElementById('creditCard');
+
+            // 清除之前的錯誤信息
+            document.querySelectorAll('.error').forEach(span => {
+                // span.textContent = ''; // 清空文本
+                span.classList.remove('active'); // 隱藏錯誤提示
+            });
+
+            let isValid = true;
+
+            // 驗證姓名
+            if (name.value.trim() === '' || name.value.length < 2) {
+                const errorSpan = name.nextElementSibling;
+                errorSpan.textContent = '請輸入有效姓名！';
+                errorSpan.classList.add('active');
+                isValid = false;
+            }
+
+            // 驗證手機號碼
+            if (!phone.value.match(/^09[0-9]{8}$/)) {
+                const errorSpan = phone.nextElementSibling;
+                errorSpan.textContent = '請輸入有效的手機號碼！';
+                errorSpan.classList.add('active');
+                isValid = false;
+            }
+
+            // 驗證電子郵件
+            if (!email.value.match(/^[^@\s]+@[^@\s]+\.[^@\s]+$/)) {
+                const errorSpan = email.nextElementSibling;
+                errorSpan.textContent = '請輸入有效的電子郵件！';
+                errorSpan.classList.add('active');
+                isValid = false;
+            }
+
+            // 驗證信用卡號
+            if (!creditCard.value.match(/^[0-9]{4}-[0-9]{4}-[0-9]{4}-[0-9]{4}$/)) {
+                const errorSpan = creditCard.nextElementSibling;
+                errorSpan.textContent = '請輸入有效的信用卡號！';
+                errorSpan.classList.add('active');
+                isValid = false;
+            }
+
+            if (isValid) {
+                console.log('輸入正確');
+                // window.location.href = 'order.html';
+            } else {
+                console.log('輸入錯誤');
+
+            }
+        };
+    </script>
+
+
 </body>
 
 </html>
