--- a/trip.html
+++ b/trip.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="trip_hero">
         <div class="header_logo">
             <a href="#">
                 <img src="/src/assets/images/icon/LOGO.svg" alt="">
