--- a/tripInfo.html
+++ b/tripInfo.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="tripInfo_hero">
         <div class="header_logo">
             <a href="#">
                 <img src="/src/assets/images/icon/LOGO.svg" alt="">
@@ -29,8 +29,8 @@
                 <li><a href="">首頁</a></li>
                 <li><a href="">概念</a></li>
                 <li><a href="">饗宴</a></li>
-                <li><a href="">設施</a></li>
-                <li><a href="">旅程</a></li>
+                <li><a href="/facilities.html">設施</a></li>
+                <li><a href="/trip.html">旅程</a></li>
             </ul>
         </nav>
     </header>
@@ -58,7 +58,7 @@
             </div>
             <div>
                 <p>台北出發，搭乘鐵路前往台中，沿途的景色會讓你驚艷不已。列車穿越繁華的都市後，逐漸進入寧靜的山林與田野。你可以看到壯麗的中央山脈在遠方矗立，隨著列車的前行，山谷與河流交織出一幅幅美麗的畫面。</p>
-                <a href="">行程預約</a>
+                <a href="/reservation.html">行程預約</a>
             </div>
         </div>
         <!-- 風景介紹 -->
@@ -86,7 +86,7 @@
         </div>
 
         <!-- 餐點介紹 -->
-        <div class="jp_dessert_info">
+        <div class="jp_dessert_info ">
             <div>
                 <h3>餐點介紹
                     <span>▼</span>
