--- a/facilities.html
+++ b/facilities.html
@@ -98,7 +98,7 @@
                         </h4>
                         <div></div>
                     </div>
-                    <img src="/src/assets/images/train_exterior/train_exterior_7.png.png" alt="">
+                    <img src="/src/assets/images/train_exterior/train_exterior_7.png" alt="">
                 </div>
 
                 <div class="vip_side_info">
