--- a/tripInfo copy 2.html
+++ b/tripInfo copy 2.html
@@ -63,11 +63,11 @@
         </div>
         <!-- 風景介紹 -->
         <div class="view_info">
-
+            <div>
                 <h3>沿途風景
                     <span>▼</span>
                 </h3>
-
+            </div>
             <!-- img -->
             <div class="view_info_content">
                 <div>
@@ -86,30 +86,42 @@
         </div>
 
         <!-- 餐點介紹 -->
-        <div class="dessert_info ">
-
+        <div class="jp_dessert_info ">
+            <div>
                 <h3>餐點介紹
                     <span>▼</span>
                 </h3>
-
+            </div>
             <div>
                 <div class="dessert_section">
-                    <h5>舒芙雷套餐（含飲料）</h5>
-                    <span>舒芙蕾：<br>
-                        由新鮮的雞蛋和高品質的牛奶製成，外層金黃酥脆，內裡則柔軟綿密。
-                        <br>配料選擇：<br>
-                        我們提供多種配料選擇，包括香滑的鮮奶油、時令水果（如草莓、藍莓）、以及自製的焦糖醬或抹茶醬，讓您根據個人口味自由搭配，增添風味。
-                        <br>飲品搭配：<br>
-                        精選香醇的日式綠茶，與舒芙蕾相輔相成。</span>
-                    <img src="/src/assets/images/dessert/dessert_newDessert.jpg" alt="">
+                    <h5>蒙布朗佐馬卡龍</h5>
+                    <span>
+                        蒙布朗：<br />
+                        這款蒙布朗甜點以細膩的栗子餡為主角，搭配香滑的奶油霜，外層包裹著輕盈的蛋糕，展現出豐富的層次感，每一口都充滿秋天的暖意。
+                        <br /><br />
+                        馬卡龍：<br />
+                        我們的馬卡龍外脆內軟，選用新鮮食材製作，口味多樣，從經典的香草到濃郁的巧克力，無論是哪一種，都帶來絕妙的甜蜜享受。
+                        <br /><br />
+                        卡布奇諾：
+                        這杯卡布奇諾由濃郁的咖啡和綿密的奶泡完美結合，散發著香醇的咖啡香氣，微微的苦味與奶香交融，為甜點時光增添一抹溫暖與愉悅。
+                    </span>
+                    <img src="/src/assets/images/dessert/trip_Eur.png" alt="">
                 </div>
+
                 <div class="dessert_section">
-                    <h5>日式和菓子套餐（含飲料）</h5>
-                    <span>日式菓子：<br>
-                        和菓子：選用當季新鮮食材，製作出色彩繽紛的和菓子，像是細膩的麻糬、香甜的紅豆糕和繽紛的水果羊羹，無論是口感還是外觀都讓人驚喜。
-                        <br>靜岡抹茶：<br>
-            提供選自日本優質茶園，茶香濃郁，口感清新，完美搭配各式和菓子。</span>
-                    <img src="/src/assets/images/dessert/tripInfo_Jp02.png" alt="">
+                    <h5>草莓塔佐馬卡龍</h5>
+                    <span>
+                        
+                        草莓塔：<br />
+                        這款草莓塔以新鮮草莓為主料，搭配細緻的酥皮與香滑的奶油餡，酸甜的滋味讓每一口都充滿春天的清新氣息，是甜點中的經典之作。
+                        <br /><br />
+                        馬卡龍：<br />
+                        我們的馬卡龍色彩繽紛，外脆內軟，口味多樣，從經典的香草、鮮果到濃郁的巧克力，每一口都是甜蜜的驚喜，讓你欲罷不能。
+                        <br /><br />
+                        精品拿鐵：<br />
+                        這杯精品拿鐵由優質咖啡豆精心萃取而成，香濃的咖啡與綿密的奶泡完美結合，微微的甜味與濃郁的香氣，為你的甜點時光增添無限魅力。
+                    </span>
+                    <img src="/src/assets/images/dessert/tripInfo_Eur04.png" alt="">
                 </div>
             </div>
         </div>
