--- a/tripInfo copy.html
+++ b/tripInfo copy.html
@@ -54,7 +54,7 @@
                 <p><span> 日式甜點</span>
                     台北⭢台中
                 </p>
-                <img src="/src/assets/images/train_exterior/tripInfo_train01.png" alt="">
+                <img src="/src/assets/images/train_exterior/Facilities_train.png" alt="">
             </div>
             <div>
                 <p>台北出發，搭乘鐵路前往台中，沿途的景色會讓你驚艷不已。列車穿越繁華的都市後，逐漸進入寧靜的山林與田野。你可以看到壯麗的中央山脈在遠方矗立，隨著列車的前行，山谷與河流交織出一幅幅美麗的畫面。</p>
@@ -63,22 +63,22 @@
         </div>
         <!-- 風景介紹 -->
         <div class="view_info">
-
+            <div>
                 <h3>沿途風景
                     <span>▼</span>
                 </h3>
-
+            </div>
             <!-- img -->
             <div class="view_info_content">
                 <div>
                     <h5>Landscape</h5>
                     <p>春天的櫻花、夏天的綠意、秋天的紅葉，還是冬天的雲霧，每個季節都有其獨特的風貌。這段旅程不僅是從台北到台中的移動，更是一場視覺與心靈的饗宴，讓你在車窗外的美景中，感受到台灣的自然魅力與文化深度。
                     </p>
-                    <img src="/src/assets/images/train_exterior/tripInfo_MountainSm02.png" alt="">
+                    <img src="/src/assets/images/train_exterior/tripInfo_SeaLg02.png" alt="">
                 </div>
                 <div>
-                    <img src="/src/assets/images/train_exterior/tripInfo_MountainLg01.png" alt="">
-                    <img src="/src/assets/images/train_exterior/tripInfo_SeaSm02.png" alt="">
+                    <img src="/src/assets/images/train_exterior/train_exterior_7.png" alt="">
+                    <img src="/src/assets/images/train_exterior/tripInfo_MountainSm04.png" alt="">
                 </div>
             </div>
         </div>
@@ -86,30 +86,40 @@
         </div>
 
         <!-- 餐點介紹 -->
-        <div class="dessert_info ">
-
+        <div class="jp_dessert_info ">
+            <div>
                 <h3>餐點介紹
                     <span>▼</span>
                 </h3>
-
+            </div>
             <div>
                 <div class="dessert_section">
-                    <h5>舒芙雷套餐（含飲料）</h5>
-                    <span>舒芙蕾：<br>
-                        由新鮮的雞蛋和高品質的牛奶製成，外層金黃酥脆，內裡則柔軟綿密。
-                        <br>配料選擇：<br>
-                        我們提供多種配料選擇，包括香滑的鮮奶油、時令水果（如草莓、藍莓）、以及自製的焦糖醬或抹茶醬，讓您根據個人口味自由搭配，增添風味。
-                        <br>飲品搭配：<br>
-                        精選香醇的日式綠茶，與舒芙蕾相輔相成。</span>
-                    <img src="/src/assets/images/dessert/dessert_newDessert.jpg" alt="">
+                    <h5>麻薏蛋糕佐焦糖鳳梨</h5>
+                    <span>麻薏蛋糕：<br/>
+                        這款麻薏蛋糕以香濃的麻薏為主料，口感綿密，帶有淡淡的堅果香氣，搭配細緻的奶油霜，讓人一口接一口，回味無窮。
+                        <br/><br/>
+                        炙烤焦糖鳳梨：<br/>
+                        我們的炙烤焦糖鳳梨採用新鮮的鳳梨，經過炙烤後，散發出誘人的焦香與甜味，外脆內嫩，是完美的甜點搭配。
+                        <br/><br/>
+                        高山茶：<br/>
+                        選用來自高山的優質茶葉，泡出清新的茶湯，香氣撲鼻，帶有淡淡的甘甜，完美平衡了甜點的濃郁風味，讓你享受每一口的美好時光。
+                    </span>
+</span>
+                    <img src="/src/assets/images/dessert/tripInfo_Tw01.png" alt="">
                 </div>
                 <div class="dessert_section">
-                    <h5>日式和菓子套餐（含飲料）</h5>
-                    <span>日式菓子：<br>
-                        和菓子：選用當季新鮮食材，製作出色彩繽紛的和菓子，像是細膩的麻糬、香甜的紅豆糕和繽紛的水果羊羹，無論是口感還是外觀都讓人驚喜。
-                        <br>靜岡抹茶：<br>
-            提供選自日本優質茶園，茶香濃郁，口感清新，完美搭配各式和菓子。</span>
-                    <img src="/src/assets/images/dessert/tripInfo_Jp02.png" alt="">
+                    <h5>地瓜涼菓佐高山茶糕</h5>
+                    <span>
+                        地瓜涼菓：<br/>
+                        這款地瓜涼菓採用新鮮地瓜製作，口感滑順，甜而不膩，搭配天然的椰漿，清爽可口，是夏日消暑的最佳選擇。
+                        <br/><br/>
+                        高山茶糕：<br/>
+                        高山茶糕融合了優質高山茶的清香，質地柔軟且富有彈性，每一口都散發著茶葉的獨特風味，讓你在甜點中感受到自然的滋味。
+                        <br/><br/>
+                        凍頂烏龍茶：<br/>
+                        選用凍頂烏龍茶，泡出醇厚的茶湯，帶有淡雅的花香與清新的甘味，與各式甜點相得益彰，讓你在享受美味的同時，感受到茶的悠然魅力。
+                    </span>
+                    <img src="/src/assets/images/dessert/tripInfo_Tw04.png" alt="">
                 </div>
             </div>
         </div>
