--- a/reservation copy.html
+++ b/reservation copy.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/src/assets/css/header.css">
     <link rel="stylesheet" href="/src/assets/css/reservation.css">
     <link rel="stylesheet" href="/src/assets/css/top_btn.css">
-    <title>預約行程</title>
+    <title>預約行程TEST</title>
 </head>
 
 <body class="reservation">
@@ -37,16 +37,6 @@
     <!-- 上方訂單需求 -->
     <form action="">
         <div class="form_apply">
-
-            <div>
-                <label for="dessert_type">主題甜點：</label>
-                <select name="" id="dessert_type">
-                    <option value="jp">日式甜點</option>
-                    <option value="tw">台式甜點</option>
-                    <option value="eu">歐式甜點</option>
-                </select>
-                
-            </div>
 
             <div>
                 <label for="people">旅客人數：</label>
@@ -95,7 +85,7 @@
                         <option value="a">豪華景觀車廂Ａ - VIP 四人席</option>
                     </select>
                 </div>
-                <div>
+                <!-- <div>
                     <label for="seat">座位：</label>
                     <select name="" id="seat">
                         <option value="0">請選擇座位</option>
@@ -108,13 +98,13 @@
                         <option value="f7">F7</option>
                         <option value="f8">F8</option>
                     </select>
-                </div>
+                </div> -->
             </div>
-            <div class="seat_img">
-                <p>車廂示意圖</p>
-                <object id="car_image" data="/src/assets/images/plan/F.svg">
-                </object>
-            </div>
+            <!-- <div class="seat_img"> -->
+            <!-- <p>車廂示意圖</p> -->
+            <object id="car_image" data="/src/assets/images/plan/F.svg">
+            </object>
+            <!-- </div> -->
         </div>
 
     </form>
@@ -181,37 +171,37 @@
             <p>您的預約 - 蜂鳴號</p>
             <p>
                 <span>路線</span>
-                <span id="order_route">台北 ⭢ 台中</span>
+                <span>台北 ⭢ 台中</span>
             </p>
             <p>
                 <span>出發時間</span>
-                <span id="order_start_date">Fri,20 Sep 2024 09:00</span>
+                <span>Fri,20 Sep 2024 09:00</span>
             </p>
             <p>
                 <span>抵達時間</span>
-                <span id="order_arrive_date">Fri,20 Sep 2024 13:00</span>
+                <span>Fri,20 Sep 2024 13:00</span>
             </p>
             <p>
                 <span>乘客人數</span>
-                <span id="order_people">2 人
+                <span>2 人
                 </span>
             </p>
             <p>
                 <span>車廂</span>
-                <span id="order_car">景觀車廂Ｆ - 雙人座</span>
+                <span>景觀車廂Ｆ - 雙人座</span>
             </p>
             <p>
                 <span>座位</span>
-                <span id="order_seat">F1</span>
+                <span>F1</span>
             </p>
             <p>
                 <span>餐點</span>
-                <span id="order_dessert"> 日式舒芙蕾套餐*1, <br>
+                <span> 日式舒芙蕾套餐*1, <br>
                     日式菓子套餐*1</span>
             </p>
             <p>
                 <span>金額</span>
-                <span id="order_price">$4000</span>
+                <span>$4000</span>
             </p>
         </div>
         <!-- 右側訂單明細結束 -->
@@ -257,53 +247,192 @@
     <script>
 
         // -------------------------------------------
-        function updateOrderDetail(){
-            document.getElementById("order_")
+
+        updateCarImage();
+        function updateCarImage() {
+            const svgTrain = document.getElementById("car_image");
+
+            data =
+                [
+                    { seatID: 1, seatName: "F1", isAvailable: 1, price: 2000, count: 0 },
+                    { seatID: 2, seatName: "F2", isAvailable: 1, price: 2000, count: 0 },
+                    { seatID: 3, seatName: "F3", isAvailable: 1, price: 2000, count: 0 },
+                    { seatID: 4, seatName: "F4", isAvailable: 0, price: 2000, count: 1 },
+                    { seatID: 5, seatName: "F5", isAvailable: 0, price: 2000, count: 2 },
+                    { seatID: 6, seatName: "F6", isAvailable: 1, price: 2000, count: 0 },
+                    { seatID: 7, seatName: "F7", isAvailable: 0, price: 2000, count: 2 },
+                    { seatID: 8, seatName: "F8", isAvailable: 1, price: 2000, count: 0 },
+                    { seatID: 9, seatName: "E2", isAvailable: 0, price: 2000, count: 3 },
+                    { seatID: 10, seatName: "E3", isAvailable: 1, price: 2000, count: 0 },
+                    { seatID: 11, seatName: "E4", isAvailable: 1, price: 2000, count: 0 },
+
+
+                ]; //初始資料 ==> 這邊之後要用API抓
+                let table = svg.contentDocument.querySelectorAll(`[class=seatF${i + 1}]`);
+
+                
         }
+
+// =====
+        //  const svgTrain = document.getElementById("car_image");
+
+        //         data =
+        //             [
+        //                 { seatID: 1, seatName: "F1", isAvailable: 1, price: 2000, count: 0 },
+        //                 { seatID: 2, seatName: "F2", isAvailable: 1, price: 2000, count: 0 },
+        //                 { seatID: 3, seatName: "F3", isAvailable: 1, price: 2000, count: 0 },
+        //                 { seatID: 4, seatName: "F4", isAvailable: 0, price: 2000, count: 1 },
+        //                 { seatID: 5, seatName: "F5", isAvailable: 0, price: 2000, count: 2 },
+        //                 { seatID: 6, seatName: "F6", isAvailable: 1, price: 2000, count: 0 },
+        //                 { seatID: 7, seatName: "F7", isAvailable: 0, price: 2000, count: 2 },
+        //                 { seatID: 8, seatName: "F8", isAvailable: 1, price: 2000, count: 0 },
+        //                 { seatID: 9, seatName: "E2", isAvailable: 0, price: 2000, count: 3 },
+        //                 { seatID: 10, seatName: "E3", isAvailable: 1, price: 2000, count: 0 },
+        //                 { seatID: 11, seatName: "E4", isAvailable: 1, price: 2000, count: 0 },
+
+
+        //             ]; //初始資料 ==> 這邊之後要用API抓
+
+        //         myFun(svgTrain);
+
+
+
+
+        //         function myFun(svg) {
+        //             svg.addEventListener("load", function () {
+        //                 let nowTable = "";
+
+        //                 refreshUI(svg);
+        //                 for (let i = 0; i < data.length; i++) { //全部的桌子
+        //                     if (data[i].isAvailable) { //根據data的isAvailable 去變色
+        //                         let table = svg.contentDocument.querySelectorAll(`[class=seatF${i + 1}]`); //找到各個桌子
+        //                         let tableE = svg.contentDocument.querySelectorAll(`[class=seatE${i + 1}]`); //找到各個桌子
+        //                         table.forEach((seat) => { //找到對應的桌子 裡面有有兩張椅子 迴圈找裡面兩張椅子
+        //                             seat.addEventListener("click", function () {//椅子點擊事件
+        //                                 nowTable = seat.getAttribute("class");
+        //                                 if (seat.getAttribute('isClicked') == "1") {
+        //                                     seat.setAttribute("fill", "#F0F0F0");
+        //                                     seat.setAttribute("isClicked", '0');
+        //                                     refreshUI(svg, "0.5", nowTable); //將除了選擇的桌子透明度設為0.5
+        //                                     setOpacity(svg, nowTable);  //將同桌的位子透明度設為 0.5
+        //                                 }
+        //                                 else {
+        //                                     seat.setAttribute("isClicked", "1");
+        //                                     refreshUI(svg, "0.5", nowTable); //將除了選擇的桌子透明度設為0.5
+        //                                     setOpacity(svg, nowTable);  //將同桌的位子透明度設為1
+        //                                 }
+        //                             })
+        //                         });
+        //                     }
+        //                 }
+
+        //                 document.getElementById("complete").addEventListener("click", function () {
+        //                     setData(svg);
+        //                 })
+        //             })
+        //         }
+
+
+        //         function setData(svg) {
+        //             for (let i = 0; i < data.length; i++) {
+        //                 let table = svg.contentDocument.querySelectorAll(`[class=seatF${i + 1}]`); //找到各個桌子
+        //                 table.forEach((seat) => {
+        //                     if (seat.getAttribute("isClicked") == "1") {
+        //                         data[i].isAvailable = 0;
+        //                         data[i].count++;
+        //                     }
+        //                 })
+        //             }
+        //             console.log(data); // 按ok之後傳出去的資料, post...
+        //         }
+
+        //         function setOpacity(svg, className) {
+        //             let temp = svg.contentDocument.getElementsByClassName(`${className}`);
+        //             let checked = 0;
+        //             console.log(className);
+
+        //             for (let i = 0; i < temp.length; i++) {
+        //                 if (temp[i].getAttribute("isClicked") == 1)
+        //                     checked++;
+        //             }
+        //             for (let i = 0; i < temp.length; i++) {
+        //                 if (checked > 0)
+        //                     temp[i].setAttribute("opacity", 1);
+        //                 else
+        //                     temp[i].setAttribute("opacity", 0.5);
+        //             }
+        //         }
+
+        //         function refreshUI(svg, opacity = "1", nowTable) {
+
+        //             for (let i = 0; i < data.length; i++) { //全部的桌子
+
+        //                 if (data[i].isAvailable) { //根據data的isAvailable 去變色
+        //                     svg.contentDocument.querySelectorAll(`[class=seatF${i + 1}]`).forEach((seat) => { //找到對應的桌子 裡面有有兩張椅子 迴圈找裡面兩張椅子
+        //                         if (seat.getAttribute("class") != nowTable) {
+        //                             seat.setAttribute("fill", "#F0F0F0"); //初始化顏色
+        //                             seat.setAttribute("opacity", opacity);  //初始化透明度
+        //                             seat.setAttribute("isClicked", "0");
+        //                         }
+        //                         if (seat.getAttribute("isClicked") == 1) {
+        //                             seat.setAttribute("fill", "#6DAA7C");//可以選的椅子點下去變綠色
+        //                         }
+        //                     });
+        //                 }
+        //                 else {
+        //                     svg.contentDocument.querySelectorAll(`[class=seatF${i + 1}]`).forEach((seat) => {
+        //                         seat.setAttribute("fill", "#8C8C8C");
+        //                     });
+        //                 }
+        //             }
+        //         }
+
+
+
 
 
         // ----- 車廂選項綁定車廂座位與車廂圖片 -----
         document.getElementById('car_type').addEventListener('change', function () {
-            var seatSelect = document.getElementById('seat');
+            // var seatSelect = document.getElementById('seat');
             var carImage = document.getElementById('car_image');
 
             // 清空座位選項
-            seatSelect.innerHTML = '';
+            // seatSelect.innerHTML = '';
 
             if (this.value === 'e') {
-                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
-                seatSelect.innerHTML += '<option value="e1">E2</option>';
-                seatSelect.innerHTML += '<option value="e2">E3</option>';
-                seatSelect.innerHTML += '<option value="e3">E4</option>';
+                // seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                // seatSelect.innerHTML += '<option value="e1">E2</option>';
+                // seatSelect.innerHTML += '<option value="e2">E3</option>';
+                // seatSelect.innerHTML += '<option value="e3">E4</option>';
                 carImage.data = '/src/assets/images/plan/E.svg';
             } else if (this.value === 'd') {
-                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
-                seatSelect.innerHTML += '<option value="d1">D1</option>';
-                seatSelect.innerHTML += '<option value="d2">D2</option>';
-                seatSelect.innerHTML += '<option value="d3">D3</option>';
-                seatSelect.innerHTML += '<option value="d4">D4</option>';
-                seatSelect.innerHTML += '<option value="d5">D5</option>';
-                seatSelect.innerHTML += '<option value="d6">D6</option>';
+                // seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                // seatSelect.innerHTML += '<option value="d1">D1</option>';
+                // seatSelect.innerHTML += '<option value="d2">D2</option>';
+                // seatSelect.innerHTML += '<option value="d3">D3</option>';
+                // seatSelect.innerHTML += '<option value="d4">D4</option>';
+                // seatSelect.innerHTML += '<option value="d5">D5</option>';
+                // seatSelect.innerHTML += '<option value="d6">D6</option>';
                 carImage.data = '/src/assets/images/plan/D.svg';
 
             } else if (this.value === 'a') {
-                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
-                seatSelect.innerHTML += '<option value="a1">A1</option>';
+                // seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                // seatSelect.innerHTML += '<option value="a1">A1</option>';
                 carImage.data = '/src/assets/images/plan/A.svg';
 
             }
 
             else if (this.value === 'f') {
                 // 還原到原始選項
-                seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
-                seatSelect.innerHTML += '<option value="f1">F1</option>';
-                seatSelect.innerHTML += '<option value="f2">F2</option>';
-                seatSelect.innerHTML += '<option value="f3">F3</option>';
-                seatSelect.innerHTML += '<option value="f4">F4</option>';
-                seatSelect.innerHTML += '<option value="f5">F5</option>';
-                seatSelect.innerHTML += '<option value="f6">F6</option>';
-                seatSelect.innerHTML += '<option value="f7">F7</option>';
-                seatSelect.innerHTML += '<option value="f8">F8</option>';
+                // seatSelect.innerHTML += '<option value="0">請選擇座位</option>';
+                // seatSelect.innerHTML += '<option value="f1">F1</option>';
+                // seatSelect.innerHTML += '<option value="f2">F2</option>';
+                // seatSelect.innerHTML += '<option value="f3">F3</option>';
+                // seatSelect.innerHTML += '<option value="f4">F4</option>';
+                // seatSelect.innerHTML += '<option value="f5">F5</option>';
+                // seatSelect.innerHTML += '<option value="f6">F6</option>';
+                // seatSelect.innerHTML += '<option value="f7">F7</option>';
+                // seatSelect.innerHTML += '<option value="f8">F8</option>';
                 carImage.data = '/src/assets/images/plan/F.svg';
             }
         });
